--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comunicaçãp</title>
+    <title>Comunicação</title>
     <!--Css-->
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./fonts/PlayfairDisplay-Regular.ttf">
         <!--Css Api-->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!--Css Api-->
@@ -54,6 +55,50 @@
                 </section>
             <!--Sessão 02-->
         <!--Container 01 Introdução-->
+        <!--Container 02-->
+            <section class="container-xxl">
+                <article style="background: var(--bs-verde);">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!--Texto-->
+                            <div class="w-50">
+                                <div style="max-height: 400px; overflow-y: auto; display: flex; justify-content: center;">
+                                    <div class="w-75 d-flex">
+                                        <span class="w-100">
+                                            <!--Introdução-->
+                                                <span style="gap: 0.5rem;" class="d-flex align-items-end">
+                                                    <img style="width: 15% !important;" src="./img/icons/icon01.webp" alt="Icon parte01">
+                                                    <span style="height: 6vh !important; display: flex; align-items: center; width: 35% !important;">
+                                                        <h4 style="background: url(./img/icons/Setaazul.webp); background-size: cover; width: 100% !important; padding-left: 1rem !important; color: var(--bs-white); font-family: PlayfairDisplay-Regular !important; font-size: 2rem;">Parte 1</h4>
+                                                    </span>
+                                                </span>
+                                            <!--Introdução-->
+                                            <br>
+                                            <!--Titulo-->
+                                                <div style="color: var(--bs-azul-intermediario);">
+                                                    <h4>Comportamentos e atitudes de resiliência e adaptabilidade</h4>
+                                                </div>
+                                            <!--Titulo-->
+                                            <br>
+                                            <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                <p>Em um mundo em constante transformação, seja no ambiente do trabalho ou na sociedade, onde as mudanças são muitas vezes imprevisíveis e os desafios crescem a todo momento, reflita: como podemos demonstrar adaptabilidade e resiliência para inspirar pessoas e alcançar resultados esperados? Pense: quais são as atitudes ou comportamentos que demonstram resiliência e adaptabilidade?</p>
+                                                    <br>
+                                                <p>O líder de uma equipe, por exemplo, demonstra comportamentos e atitudes de adaptabilidade e resiliência ao reagir proativamente a mudanças e incertezas, mantendo a calma e o foco na resolução de problemas. Ele demonstra flexibilidade ao ajustar as estratégias conforme necessário, e ao encorajar sua equipe a fazer o mesmo, promove um ambiente de aprendizado contínuo e desenvolvimento constante. O mesmo pode ser dito para uma pessoa que compõe um grupo de trabalho ou de estudos: suas habilidades de resiliência e adaptabilidade são mobilizadas à medida que se deparam com situações que demandam coragem para enfrentar desafios complexos, flexibilidade para mudar as estratégias traçadas ou ao receberem um feedback contrário às suas expectativas. As atitudes de resiliência e adaptabilidade podem ser vistas em pessoas que demonstram uma autogestão emocional em momentos de tensão, e enfrentam proativamente os desafios mais complexos em seu dia a dia. Seja no trabalho, nos estudos ou na vida cotidiana, a resiliência se manifesta na capacidade de enfrentar adversidades sem perder a motivação, enquanto a adaptabilidade aparece como habilidade de incorporar novas ideias e lidar positivamente com as mudanças. As alterações no cenário em que estamos inseridos não precisam ser somente um novo obstáculo, é possível vê-las como oportunidades. </p>
+                                                    <br>
+                                            </span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        <!--Texto-->
+                        <!--Texto-->
+                            <span class="w-50">
+                                <img class="w-100" src="./img/Segundaimg.webp" alt="Segunda Img">
+                            </span>
+                        <!--Texto-->
+                    </div>
+                </article>
+            </section>
+        <!--Container 02-->
     </main>
 </body>
     <!--Js-->
