--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </article>
             </section>
         <!--Container 03-->
-        <!--Container 02-->
+        <!--Container 04-->
             <section class="container-xxl">
                 <article style="background: var(--bs-azul-escuro);">
                     <div class="d-flex justify-content-center align-items-center">
@@ -430,6 +430,167 @@
                         <!--Img-->
                             <span class="w-50">
                                 <img class="w-100" src="./img/Quartaimg.webp" alt="Quarta Img">
+                            </span>
+                        <!--Img-->
+                    </div>
+                </article>
+            </section>
+        <!--Container 04-->
+        <!--Container 05-->
+            <section class="container-xxl">
+                <article style="background: var(--bs-laranja);">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!--Img-->
+                            <span class="w-50">
+                                <img class="w-100" src="./img/Quintaimg.webp" alt="Segunda Img">
+                            </span>
+                        <!--Img-->
+                        <!--Texto-->
+                            <div class="w-50">
+                                <div style="max-height: 400px; overflow-y: auto; display: flex; justify-content: center;">
+                                    <div class="w-100 d-flex">
+                                        <span class="w-100">
+                                            <div id="carouselExample3" class="carousel slide">
+                                                <div class="carousel-inner d-flex justify-content-center">
+                                                    <!--introdução-->
+                                                        <div class="carousel-item w-75 active">
+                                                            <span class="w-100">
+                                                                <!--Introdução-->
+                                                                    <span style="gap: 0.5rem;" class="d-flex align-items-end">
+                                                                        <img style="width: 15% !important;" src="./img/icons/icon04.webp" alt="Icon parte01">
+                                                                        <span style="height: 6vh !important; display: flex; align-items: center; width: 35% !important;">
+                                                                            <h4 style="background: url(./img/icons/Setaazulclaro.webp); background-size: cover; width: 100% !important; padding-left: 1rem !important; color: var(--bs-azul-escuro); font-family: PlayfairDisplay-Regular !important; font-size: 2rem;">Parte 4</h4>
+                                                                        </span>
+                                                                    </span>
+                                                                <!--Introdução-->
+                                                                <br>
+                                                                <!--Titulo-->
+                                                                    <div style="color: var(--bs-azul-escuro);">
+                                                                        <h4>Gerenciando emoções</h4>
+                                                                    </div>
+                                                                <!--Titulo-->
+                                                                <br>
+                                                                <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                                    <p>Outro importante comportamento de pessoas resilientes e adaptáveis é a capacidade de autogestão ou regulação das próprias emoções. Claro que em muitos momentos da vida, enfrentamos situações em que as emoções transbordam, isso é normal, muitas vezes uma atitude saudável e necessária. No entanto, em outros momentos, sobretudo em contextos de convívio com demais pessoas ou em ambientes de interação, como em grupos de estudo, estratégias são necessárias para mobilizar as nossas capacidades de gerenciar as próprias emoções, a fim de sermos resilientes e adaptáveis frente a situações desafiadoras, mudanças e demais adversidades enfrentadas ao longo da vida. </p>
+                                                                        <br>
+                                                                    <p>Imagine uma situação em que você foi informado de que deverá fazer uma apresentação inesperada em uma palestra na "semana de tecnologia da sua universidade" em substituição a um colega de turma, que, infelizmente, apresentou problemas de saúde. </p>
+                                                                        <br>
+                                                                    <p>Este tipo de situação pode gerar um nervosismo, ansiedade e, para algumas pessoas, até mesmo medo. Em situações como estas, a autogestão de nossas emoções é um fator muito importante. Cada indivíduo tem as suas próprias inseguranças, mas também “seus próprios dispositivos” de como lidar com elas. Para alguns, na situação descrita acima, bastaria uma revisão detalhada da apresentação e uma força tarefa para inserir as últimas informações. Para outros, treinar a apresentação com colegas seria algo que ajudaria a ganhar confiança.</p>
+                                                                        <br>
+                                                                    <p>O importante é que você possa refletir sobre o que se pode fazer para melhor gerir as suas emoções como insegurança, nervosismo, entre outras. Alguns exemplos: afastar-se da situação por alguns minutos para depois observá-la com um olhar mais calmo, conversar com seu professor orientador sobre seu receio quanto ao tempo de preparo para a apresentação, obter feedback de um colega de confiança, pesquisar em sites especializados (de fontes confiáveis) para obter maiores informações, reorganizar as atividades para priorizar a demanda ou situação que lhe causa preocupação e, claro, se necessário, buscar ajuda em sua rede de suporte ou com um profissional da saúde mental como um psicólogo, por exemplo. </p>
+                                                                        <br>
+                                                                    <p>Situações que demandam uma autogestão emocional são muito recorrentes por isso. O desenvolvimento de estratégias e práticas de autogestão emocional são um importante fator para enfrentarmos estes problemas. Imagine que na referida situação da apresentação repentina, você tenha conseguido identificar como lidar com a sensação inicial de insegurança em realizar a apresentação ao estudá-la, treiná-la e revisá-la com um colega de classe. Apesar do nervosismo inicial e da imprevisibilidade, você realizou uma apresentação satisfatória e, com isso, há uma grande chance de conquistar uma posição de destaque na universidade e atrair a atenção de recrutadores que estarão nas palestras. </p>
+                                                                        <br>
+                                                                    <p>O gerenciamento emocional é uma habilidade que pode ser desenvolvida ao longo do tempo, exigindo esforço consciente e aprendizado constante.</p>
+                                                                        <br>
+                                                                    <p>Identificar emoções, refletir sobre gatilhos emocionais e desenvolver estratégias para lidar com suas variações, é importante para fortalecer o gerenciamento emocional. Técnicas como respiração controlada e o uso da empatia para entender o ponto de vista dos outros se somam ao suporte advindo de nossa rede de apoio, constituída de amigos e familiares além de, quando necessário, de acompanhamento profissional terapêutico.</p>
+                                                                        <br>
+                                                                    <p>Embora desafiador, experimentar e negociar com este mundo das emoções é fundamental para tomar decisões equilibradas, manter relações saudáveis e lidar com os desafios de forma mais eficaz, desenvolvendo comportamentos e atitudes mais resilientes e adaptáveis. Como qualquer habilidade, exige-se paciência, prática e a disposição de aprender com as experiências da vida.</p> 
+                                                                        <br>   
+                                                                </span>
+                                                            </span>    
+                                                        </div>
+                                                  <!--introdução-->
+                                                  <!--Questões-->
+                                                    <div class="carousel-item w-75">
+                                                        <span class="w-100">
+                                                            <div style="gap: 1rem; color: var(--bs-azul-escuro);" class="d-flex justify-content-evenly flex-column">
+                                                                <!--Questões 01-->
+                                                                <span style="gap: 0.5rem;" class="w-50 d-flex align-items-center">
+                                                                    <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 01">
+                                                                    <h4>Apresentações inesperadas</h4>
+                                                                </span>
+                                                                <!--Questões 01-->
+                                                                <!--Questões 02-->
+                                                                <span style="gap: 0.5rem;" class="w-50 d-flex align-items-center">
+                                                                    <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 02">
+                                                                    <h4>Lidando com feedbacks construtivos</h4>
+                                                                </span>
+                                                                <!--Questões 02-->
+                                                                <!--Questões 03-->
+                                                                <span style="gap: 0.5rem;" class="w-50 d-flex align-items-center">
+                                                                    <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 03">
+                                                                    <h4>Desenvolvendo habilidades de autogestão emocional</h4>
+                                                                </span>
+                                                                <!--Questões 03-->
+                                                            </div>
+                                                        </span>    
+                                                    </div>
+                                                  <!--Questões-->
+                                                  <!--Finais-->
+                                                  <div class="carousel-item w-75">
+                                                    <span class="w-100">
+                                                        <br>
+                                                        <!--Titulo-->
+                                                            <div style="color: var(--bs-azul-escuro);">
+                                                                <h4>Considerações finais</h4>
+                                                            </div>
+                                                        <!--Titulo-->
+                                                        <br>
+                                                        <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                            <p>A autogestão emocional é um importante componente das habilidades de Resiliência e Adaptabilidade. Pessoas resilientes e adaptáveis mantêm o equilíbrio diante de adversidades e da pressão, ajustam-se rapidamente às demandas de um ambiente em constante transformação, desenvolvendo soluções eficazes e criativas. Cultivar essas habilidades é essencial para estar preparado para desafios, fortalecer relações interpessoais e conquistar reconhecimento e alcançar as metas acadêmicas, de vida ou profissionais. Assim, há chances de transformar oportunidades de aprendizado e superação em passos sólidos rumo a uma jornada de sucesso.</p>
+                                                                <br>  
+                                                        </span>
+                                                    </span> 
+                                                  </div>
+                                                  <!--Finais-->
+                                                </div>
+                                                <button style="height: 32rem !important;"  class="carousel-control-prev" type="button" data-bs-target="#carouselExample3" data-bs-slide="prev">
+                                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                  <span class="visually-hidden">Previous</span>
+                                                </button>
+                                                <button style="height: 32rem !important;" class="carousel-control-next" type="button" data-bs-target="#carouselExample3" data-bs-slide="next">
+                                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                  <span class="visually-hidden">Next</span>
+                                                </button>
+                                              </div>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        <!--Texto-->
+                    </div>
+                </article>
+            </section>
+        <!--Container 05-->
+        <!--Container 02-->
+            <section class="container-xxl">
+                <article style="background: var(--bs-verde);">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!--Texto-->
+                            <div class="w-50">
+                                <div style="max-height: 400px; overflow-y: auto; display: flex; justify-content: center;">
+                                    <div class="w-75 d-flex">
+                                        <span class="w-100">
+                                            <!--Introdução-->
+                                                <span style="gap: 0.5rem;" class="d-flex align-items-end">
+                                                    <img style="width: 15% !important;" src="./img/icons/icon01.webp" alt="Icon parte01">
+                                                    <span style="height: 6vh !important; display: flex; align-items: center; width: 35% !important;">
+                                                        <h4 style="background: url(./img/icons/Setaazul.webp); background-size: cover; width: 100% !important; padding-left: 1rem !important; color: var(--bs-white); font-family: PlayfairDisplay-Regular !important; font-size: 2rem;">Parte 5</h4>
+                                                    </span>
+                                                </span>
+                                            <!--Introdução-->
+                                            <br>
+                                            <!--Titulo-->
+                                                <div style="color: var(--bs-azul-intermediario);">
+                                                    <h4>Desafios e adversidades: coragem para enfrentá-los</h4>
+                                                </div>
+                                            <!--Titulo-->
+                                            <br>
+                                            <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                <p>Em um mundo em constante transformação, seja no ambiente do trabalho ou na sociedade, onde as mudanças são muitas vezes imprevisíveis e os desafios crescem a todo momento, reflita: como podemos demonstrar adaptabilidade e resiliência para inspirar pessoas e alcançar resultados esperados? Pense: quais são as atitudes ou comportamentos que demonstram resiliência e adaptabilidade?</p>
+                                                    <br>
+                                                <p>O líder de uma equipe, por exemplo, demonstra comportamentos e atitudes de adaptabilidade e resiliência ao reagir proativamente a mudanças e incertezas, mantendo a calma e o foco na resolução de problemas. Ele demonstra flexibilidade ao ajustar as estratégias conforme necessário, e ao encorajar sua equipe a fazer o mesmo, promove um ambiente de aprendizado contínuo e desenvolvimento constante. O mesmo pode ser dito para uma pessoa que compõe um grupo de trabalho ou de estudos: suas habilidades de resiliência e adaptabilidade são mobilizadas à medida que se deparam com situações que demandam coragem para enfrentar desafios complexos, flexibilidade para mudar as estratégias traçadas ou ao receberem um feedback contrário às suas expectativas. As atitudes de resiliência e adaptabilidade podem ser vistas em pessoas que demonstram uma autogestão emocional em momentos de tensão, e enfrentam proativamente os desafios mais complexos em seu dia a dia. Seja no trabalho, nos estudos ou na vida cotidiana, a resiliência se manifesta na capacidade de enfrentar adversidades sem perder a motivação, enquanto a adaptabilidade aparece como habilidade de incorporar novas ideias e lidar positivamente com as mudanças. As alterações no cenário em que estamos inseridos não precisam ser somente um novo obstáculo, é possível vê-las como oportunidades. </p>
+                                                    <br>
+                                            </span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        <!--Texto-->
+                        <!--Img-->
+                            <span class="w-50">
+                                <img class="w-100" src="./img/Segundaimg.webp" alt="Segunda Img">
                             </span>
                         <!--Img-->
                     </div>
