--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 </article>
             </section>
         <!--Container 05-->
-        <!--Container 02-->
+        <!--Container 06-->
             <section class="container-xxl">
                 <article style="background: var(--bs-verde);">
                     <div class="d-flex justify-content-center align-items-center">
@@ -578,9 +578,23 @@
                                             <!--Titulo-->
                                             <br>
                                             <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
-                                                <p>Em um mundo em constante transformação, seja no ambiente do trabalho ou na sociedade, onde as mudanças são muitas vezes imprevisíveis e os desafios crescem a todo momento, reflita: como podemos demonstrar adaptabilidade e resiliência para inspirar pessoas e alcançar resultados esperados? Pense: quais são as atitudes ou comportamentos que demonstram resiliência e adaptabilidade?</p>
+                                                <p>A vida é repleta de desafios, seja no âmbito pessoal, ou no acadêmico. Muitas vezes, estes desafios geram algum tipo de receio, medo, insegurança ou outro sentimento que nos coloca em uma situação que nos demanda coragem para enfrentá-lo.  Pode ser uma nova experiência para a qual não nos sentimos preparados, um grau de exigência muito elevada em relação a alguma atividade que está sendo desempenhada, uma mudança no cenário tecnológico como o advento das IA’s generativas, ou mesmo alguma dificuldade de âmbito pessoal que nos afeta de tal maneira que nos faz pensar se estamos aptos a lidar com o determinado desafio.</p>
                                                     <br>
-                                                <p>O líder de uma equipe, por exemplo, demonstra comportamentos e atitudes de adaptabilidade e resiliência ao reagir proativamente a mudanças e incertezas, mantendo a calma e o foco na resolução de problemas. Ele demonstra flexibilidade ao ajustar as estratégias conforme necessário, e ao encorajar sua equipe a fazer o mesmo, promove um ambiente de aprendizado contínuo e desenvolvimento constante. O mesmo pode ser dito para uma pessoa que compõe um grupo de trabalho ou de estudos: suas habilidades de resiliência e adaptabilidade são mobilizadas à medida que se deparam com situações que demandam coragem para enfrentar desafios complexos, flexibilidade para mudar as estratégias traçadas ou ao receberem um feedback contrário às suas expectativas. As atitudes de resiliência e adaptabilidade podem ser vistas em pessoas que demonstram uma autogestão emocional em momentos de tensão, e enfrentam proativamente os desafios mais complexos em seu dia a dia. Seja no trabalho, nos estudos ou na vida cotidiana, a resiliência se manifesta na capacidade de enfrentar adversidades sem perder a motivação, enquanto a adaptabilidade aparece como habilidade de incorporar novas ideias e lidar positivamente com as mudanças. As alterações no cenário em que estamos inseridos não precisam ser somente um novo obstáculo, é possível vê-las como oportunidades. </p>
+                                                <p>Situações assim, não são raras e quando ocorrem, põem à prova as nossas capacidades de resiliência e adaptabilidade. A força que nos mobiliza a agir nestas situações é a coragem, isto é, a energia que proporciona o enfrentamento de desafios e de situações complexas que nos geram incertezas, dúvidas ou inseguranças sobre as nossas capacidades.  </p>
+                                                    <br>
+                                                <p>Por exemplo, Cristina, uma aluna do último ano do curso de Ciências da Computação, faz parte de um projeto da universidade em uma parceria com uma aceleradora de startups. O programa consiste em envolver diferentes grupos de alunos em parte das iniciativas das diferentes startups para promover uma troca de conhecimentos entre as empresas e os estudantes, além de aproximar os alunos de experiências reais do mercado de trabalho. Cristina está em grupo de alunos alocado em uma empresa que está desenvolvendo um software para uma rede de loja de roupas. É um projeto com elevado grau de complexidade e com prazo consideravelmente apertado para a entrega final. Durante os testes, foi diagnosticado que software em desenvolvimento apresentava falhas importantes que afetavam a sua plena funcionalidade, de maneira que, segundo as estimativas para corrigir os erros apontados, seria impossível entregá-lo dentro do prazo estipulado.</p>
+                                                    <br>
+                                                <p>Todo o time envolvido no projeto fica muito preocupado com a situação, porém, com receio de reportar para a liderança que o projeto levará mais tempo para ser concluído. Em uma das reuniões entre o professor coordenador do projeto e os alunos participantes, Cristina relata o problema e compartilha uma ideia para resolvê-lo. Ela comenta que, junto aos demais alunos e um desenvolvedor da empresa, realizaram um mapeamento dos riscos e problemas identificados nos testes, detalharam o escopo para resolução e entrega do software, propondo dois caminhos para realizar a entrega: negociar um novo prazo com o cliente ou alocar mais pessoas no desenvolvimento. </p>
+                                                    <br>
+                                                <p>Com estas ideias e dados em mãos, Cristina, seu grupo e o professor, promovem uma apresentação à liderança da startup, compartilhando os problemas detalhadamente e oferecendo as soluções que haviam planejado. </p>
+                                                    <br>
+                                                <p>A atitude de Cristina rompeu com a insegurança e o medo do time ao reportar o problema em todas as suas dimensões e riscos, ao mesmo tempo, proporcionou caminhos para a entrega do projeto. 
+                                                    Este é um exemplo de como a coragem, isto é, a capacidade de se mobilizar proativamente frente a situações desafiadores e complexas, pode ser um importante comportamento de pessoas resilientes e adaptáveis. Não é incomum que em situações como estas, em que temos que lidar com problemas muito difíceis, pensarmos que estamos sem perspectivas. Nestas horas, para além dos conhecimentos técnicos, também é necessário sermos corajosos, isto é, encarar a situação mesmo com todos os nossos receios, dúvidas e inseguranças. Enfim, os comportamentos que podem ser considerados corajosos podem ser percebidos justamente quando as pessoas lidam com situações que consideram desafiadoras e difíceis. 
+                                                </p>
+                                                    <br>
+                                                <p>Há outras formas em que comportamentos ou atitudes corajosas são relevantes: ter uma conversa sincera com o seu colega sobre uma situação difícil, assumir a liderança por um projeto que você considera desafiador ou iniciar um novo curso. Estas são apenas algumas exemplificações e situações que demandam coragem para serem enfrentadas. No entanto, isto pode variar para cada pessoa: o que pode ser uma atitude muito corajosa para um indivíduo, para outro, pode ser algo comum. O importante é que você possa avaliar quais são os desafios que você necessita vencer que demandam este importante comportamento. </p>
+                                                    <br>
+                                                <p>Demonstrar coragem frente às adversidades e desafios é uma importante característica de pessoas resilientes e adaptáveis, além de algo muito importante para o seu crescimento pessoal.</p>
                                                     <br>
                                             </span>
                                         </span>
@@ -590,13 +604,15 @@
                         <!--Texto-->
                         <!--Img-->
                             <span class="w-50">
-                                <img class="w-100" src="./img/Segundaimg.webp" alt="Segunda Img">
+                                <img class="w-100" src="./img/Sextaimg.webp" alt="Segunda Img">
                             </span>
                         <!--Img-->
                     </div>
                 </article>
             </section>
-        <!--Container 02-->
+        <!--Container 06-->
+        <!--Container 07-->
+        <!--Container 07-->
     </main>
 </body>
     <!--Js-->
