--- a/index.html
+++ b/index.html
@@ -613,6 +613,59 @@
         <!--Container 06-->
         <!--Container 07-->
         <!--Container 07-->
+        <!--Container 08-->
+            <section class="container-xxl">
+                <article style="background: var(--bs-laranja);">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!--Img-->
+                            <span class="w-50">
+                                <img class="w-100" src="./img/Setimaimg.webp" alt="Segunda Img">
+                            </span>
+                        <!--Img-->
+                        <!--Texto-->
+                            <div class="w-50">
+                                <div style="max-height: 400px; overflow-y: auto; display: flex; justify-content: center;">
+                                    <div class="w-75 d-flex">
+                                        <span class="w-100">
+                                            <!--Introdução-->
+                                                <span style="gap: 0.5rem;" class="d-flex align-items-end">
+                                                    <img style="width: 15% !important;" src="./img/icons/icon01.webp" alt="Icon parte01">
+                                                    <span style="height: 6vh !important; display: flex; align-items: center; width: 35% !important;">
+                                                        <h4 style="background: url(./img/icons/Setaazulclaro.webp); background-size: cover; width: 100% !important; padding-left: 1rem !important; color: var(--bs-azul-escuro); font-family: PlayfairDisplay-Regular !important; font-size: 2rem;">Parte 7</h4>
+                                                    </span>
+                                                </span>
+                                            <!--Introdução-->
+                                            <br>
+                                            <!--Titulo-->
+                                                <div style="color: var(--bs-azul-escuro);">
+                                                    <h4>Situações que demandam resiliência</h4>
+                                                </div>
+                                            <!--Titulo-->
+                                            <br>
+                                            <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                <p>Os desafios, em algumas ocasiões, podem ser bastante intensos e exigirem muito das diversas pessoas envolvidas em uma determinada atividade. Pode ser em razão de um elevado grau de complexidade de uma determinada tarefa ou projeto, uma inesperada mudança, por questões de ordem pessoal, entre outros fatores.</p>
+                                                    <br>
+                                                <p>Os dois exemplos a seguir são situações que demandam comportamentos e atitudes resilientes e adaptáveis. Clique nas imagens abaixo para verificar as situações e as atitudes empregadas para que os problemas fossem solucionados.</p>
+                                                    <br>
+                                                <span class="d-flex justify-content-center align-items-center flex-column">
+                                                    <img style="width: 35% !important;" class="w-25" src="./img/icons/situação 01.png" alt="Situação 01">
+                                                    <img style="width: 35% !important;" class="w-25" src="./img/icons/situação 02.png" alt="Situação 02">
+                                                </span>
+                                                    <br>
+                                                <p>Estes exemplos mostram como tais comportamentos e atitudes são importantes em e para nossas vidas. </p>
+                                                    <br>
+                                                <p>Enfrentar as adversidades com uma postura positiva, buscando manter a calma e suportando a pressão, ajuda na busca por soluções criativas dos problemas, e sem dúvida, é um diferencial que pode auxiliar no crescimento pessoal.</p>
+                                                    <br>
+                                            </span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        <!--Texto-->
+                    </div>
+                </article>
+            </section>
+        <!--Container 08-->
     </main>
 </body>
     <!--Js-->
